Prevent scrollbar causing layout shift

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,7 @@
 .router-container {
     flex-grow: 1;
     overflow: auto;
+    scrollbar-gutter: stable both-edges;
 }
 
 ::ng-deep .router-flex + * {
